--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,54 @@
-Django~=2.2.7
+awsebcli==3.14.1
+beautifulsoup4==4.8.1
+blessed==1.14.2
+botocore==1.10.40
+cached-property==1.4.3
+cement==2.8.2
+certifi==2018.4.16
+chardet==3.0.4
+colorama==0.3.9
+dataclasses==0.7
+decorator==4.4.1
+dj-database-url==0.5.0
+Django==2.2.7
+django-heroku==0.3.1
+docker==3.3.0
+docker-compose==1.21.2
+docker-pycreds==0.3.0
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.14
+ez-setup==0.9
+gunicorn==20.0.0
+idna==2.6
+imageio==2.6.1
+imageio-ffmpeg==0.3.0
+jmespath==0.9.3
+jsonschema==2.6.0
+moviepy==1.0.1
+music21==5.7.0
+numpy==1.17.3
+pandas==0.25.2
+pathspec==0.5.5
+Pillow==6.2.1
+proglog==0.1.9
+psycopg2==2.8.4
+python-dateutil==2.7.3
+python-wordpress-xmlrpc==2.3
+pytz==2019.3
+PyYAML==3.12
+requests==2.18.4
+selenium==3.141.0
+semantic-version==2.5.0
+six==1.11.0
+soupsieve==1.9.4
+sqlparse==0.3.0
+tabulate==0.7.5
+termcolor==1.1.0
+texttable==0.9.1
+tqdm==4.38.0
+unroll==0.1.0
+urllib3==1.22
+wcwidth==0.1.7
+websocket-client==0.48.0
+whitenoise==4.1.4
